syntax = "proto3";

package pb;

import "google/api/annotations.proto";
option go_package = "grpc_anotation_sample/pb";

message Category {
  string id = 1;
  string name = 2;
  repeated string parents = 3;
  string desc = 4;

}

message CreateCategoryRequest { Category data = 1; }
message CreateCategoryResponse { Category data = 1; }
message GetCategoryRequest { string id = 1; }
message GetCategoryResponse { Category data = 1; }
message UpdateCategoryRequest { Category data = 1; }
message UpdateCategoryResponse { Category data = 1; }
message DeleteCategoryRequest { string id = 1; }
message DeleteCategoryResponse { bool success = 1; }
message ListCategoriesRequest {}
message ListCategoriesResponse { repeated Category data = 1; }

service CategoryService {
  rpc CreateCategory(CreateCategoryRequest) returns (CreateCategoryResponse) {
    option (google.api.http) = { post: "/v1/categories" body: "*" };
  }
  rpc GetCategory(GetCategoryRequest) returns (GetCategoryResponse) {
    option (google.api.http) = { get: "/v1/categories/{id}" };
  }
  rpc UpdateCategory(UpdateCategoryRequest) returns (UpdateCategoryResponse) {
    option (google.api.http) = { put: "/v1/categories/{data.id}" body: "*" };
  }
  rpc DeleteCategory(DeleteCategoryRequest) returns (DeleteCategoryResponse) {
    option (google.api.http) = { delete: "/v1/categories/{id}" };
  }
  rpc ListCategories(ListCategoriesRequest) returns (ListCategoriesResponse) {
    option (google.api.http) = { get: "/v1/categories" };
  }
}

